[workspace]
members = ["packages/bsp", "packages/vtf", "packages/vtf-canvas", "packages/vtf-png"]
resolver = "2"

[profile.release]
opt-level = 3

[workspace.dependencies]
bincode = { version = "2.0.1", features = ["derive", "serde"] }
derive_more = { version = "2.1.1", features = ["display"] }
thiserror = "2.0.18"
wasm-bindgen = "0.2.95"
